@@ -1,7 +1,5 @@
-<?xml version="1.0"?><mxmldoc
-xmlns="http://www.easysw.com"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://www.minixml.org/mxmldoc.xsd">
+<?xml version="1.0"?>
+<mxmldoc xmlns="http://www.easysw.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.minixml.org/mxmldoc.xsd">
   <function name="mxmlAdd">
     <description>Add a node to a tree.
 
